--- a/src/portal/lib/src/replication/replication.component.html
+++ b/src/portal/lib/src/replication/replication.component.html
@@ -80,7 +80,7 @@
       </clr-datagrid>
     </div>
   </div>
-  <hbr-create-edit-rule *ngIf="isSystemAdmin" [withAdmiral]="withAdmiral" [projectId]="projectId" [projectName]="projectName"
+  <hbr-create-edit-rule *ngIf="isSystemAdmin" [withAdmiral]="withAdmiral"
     (goToRegistry)="goRegistry()" (reload)="reloadRules($event)"></hbr-create-edit-rule>
   <confirmation-dialog #replicationConfirmDialog (confirmAction)="confirmReplication($event)"></confirmation-dialog>
   <confirmation-dialog #StopConfirmDialog (confirmAction)="confirmStop($event)"></confirmation-dialog>
